--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<html> 
-<head>
-  <title>ServerSahibi<title>
-</head>
+<html>
+<header><title>This is title</title></header>
 <body>
-<hl>ServerSahibi</hl>
-<body>
+Hello world
+</body>
 </html>
